--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -32,3 +32,5 @@ services:
       timeout: 10s
       retries: 3
       start_period: 10s
+    environment:
+      - Backend=http://backend:8080/api/v1/
