--- a/frontend/appsettings.json
+++ b/frontend/appsettings.json
@@ -11,10 +11,10 @@
       "IncludedFormated": true,
       "IncludeScopes": true,
       "ParseStateValues": true,
-      "ServiceName": "backend",
+      "ServiceName": "frontend",
       "ServiceVersion": "1.0.0",
-      "NameSpace": "api",
-      "ServiceInstanceId": "backend-01"
+      "NameSpace": "frontend",
+      "ServiceInstanceId": "frontend-01"
     },
     "Exporters": {
       "Traces": "otlp",
@@ -25,5 +25,8 @@
       "Endpoint": "http://localhost:4317"
     }
   },
-  "Backend": "http://localhost:5290/api/v1/"
+  "Backend": "http://localhost:5290/api/v1/",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
+  }
 }
