--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -9,6 +9,9 @@
     "DefaultConnection": "Data Source=./web.db"
   },
   "AllowedHosts": "*",
+  "AspNetCoreInstrumentation": {
+    "RecordException": "true"
+  },
   "OpenTelemetryOptions": {
     "ResourceAttributes": {
       "IncludedFormated": true,
